--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-jshint": "^2.0.0",
+    "gulp-jshint": "^2.0.4",
     "jasmine": "^2.5.2",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.1.0",
     "nodemon": "^1.9.1"
   },
   "dependencies": {
