--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "author": "EduRomoGO",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "gulp": "^3.9.0",
     "gulp-jshint": "^2.0.4",
     "jasmine": "^2.5.2",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.1.0",
-    "nodemon": "^1.9.1"
+    "nodemon": "^1.9.1",
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
