--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "babel-preset-airbnb": "^2.1.1",
+    "babel-preset-stage-0": "^6.16.0",
     "body-parser": "^1.15.0",
     "bower": "^1.8.0",
     "express": "latest",
