--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "display companies list that can be erased when clicked on them",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -w test/helpers/browser.js test/*.spec.js",
+    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "start": "nodemon app.js",
     "build": "browserify static/js/src/index.js -o static/js/build/bundle.js",
     "watch": "watchify static/js/src/index.js -o static/js/build/bundle.js"
@@ -16,12 +17,21 @@
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.6.0",
     "gulp": "^3.9.0",
     "gulp-jshint": "^2.0.4",
     "jasmine": "^2.5.2",
+    "jsdom": "^9.8.3",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.1.0",
+    "mocha": "^3.2.0",
     "nodemon": "^1.9.1",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "sinon": "^1.17.6",
     "webpack": "^1.14.0"
   },
   "dependencies": {
